Python support for simavr.
I have not used simavr in the last 7 years. Some things has changed since I used it last times. Here is an attempt to make it work again. At least it compiles and runs some tests and stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ callgrind.out.*
 perf.data
 .DS_Store
 .make.options*
+simavr/py/build/
+simavr/py/csimavr.py
+simavr/py/csimavr_wrap.c
+simavr/py/simavr_wrap.c
+*.pyc
+*.a
